[bugfix] Attempts to fix coverall & Sonar