@@ -55,6 +55,7 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.1</version>
                 <configuration>
+                    <release>12</release>
                     <showWarnings>true</showWarnings>
                     <showDeprecation>true</showDeprecation>
                 </configuration>
@@ -69,19 +70,33 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>3.0.0-M3</version>
+                <version>2.19.1</version>
                 <configuration>
-                    <forkCount>0</forkCount>
-                    <argLine>--add-opens nl.meron.yaeger=ALL-UNNAMED</argLine>
+                    <forkCount>5</forkCount>
+                    <argLine>-Xmx1024m --illegal-access=permit</argLine>
+                    <reuseForks>true</reuseForks>
                 </configuration>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.junit.platform</groupId>
+                        <artifactId>junit-platform-surefire-provider</artifactId>
+                        <version>1.0.3</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>org.junit.jupiter</groupId>
+                        <artifactId>junit-jupiter-engine</artifactId>
+                        <version>5.5.2</version>
+                    </dependency>
+                </dependencies>
             </plugin>
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
-                <version>0.8.4</version>
+                <version>0.8.3</version>
                 <executions>
                     <execution>
                         <id>prepare-agent</id>
+                        <phase>prepare-package</phase>
                         <goals>
                             <goal>prepare-agent</goal>
                         </goals>
@@ -195,5 +210,12 @@
             <version>3.0.0</version>
             <scope>test</scope>
         </dependency>
+        <!-- apparently needed by junit5/surefire with reuseForks=false -->
+<!--        <dependency>-->
+<!--            <groupId>org.apache.maven.surefire</groupId>-->
+<!--            <artifactId>surefire-logger-api</artifactId>-->
+<!--            <version>2.22.2</version>-->
+<!--            <scope>test</scope>-->
+<!--        </dependency>-->
     </dependencies>
 </project>
